--- a/config/database.yml
+++ b/config/database.yml
@@ -9,11 +9,9 @@ default: &default
   pool: 5
   timeout: 5000
 
-  development:
-  adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
+development:
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
